[package]
name = "via-rail-gtfsrt"
version = "0.2.0"
edition = "2024"
description = "Converts Via Rail train tracker to a Vehicle and trip GTFS Realtime feed"
license = "AGPL-3.0"
authors = ["Kyler Chin <kyler@catenarymaps.org>"]
repository = "https://github.com/catenarytransit/via-rail-gtfsrt"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.10.4"
csv = "1.3.0"
gtfs-realtime = "0.2.0"
lazy_static = "1.5.0"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

[dev-dependencies]
tokio = { version = "1.39.2", features = ["full"] }
